@@ -16,7 +16,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.security.GeneralSecurityException;
-import java.util.Collections;
 import java.util.List;
 
 public class GmailClient {
@@ -28,7 +27,8 @@ public class GmailClient {
    * Global instance of the scopes required by this quickstart. If modifying these scopes, delete
    * your previously saved tokens/ folder.
    */
-  private static final List<String> SCOPES = Collections.singletonList(GmailScopes.GMAIL_LABELS);
+  private static final List<String> SCOPES =
+      List.of(GmailScopes.GMAIL_MODIFY, GmailScopes.GMAIL_SETTINGS_BASIC, GmailScopes.GMAIL_LABELS);
 
   private static final String CREDENTIALS_FILE_PATH = "/credentials.json";
 
